src/test/contracts/negative/bad_annotation_list_and_tuple.mligo
let x = ((1, 2) : int list)
